Logout
- Logout: invalidates current token storing it in a blacklist;
- Blacklist is used to verify if token is invalidated;
- RefreshToken: updated to just receive JWT token.

TODO:
- Set Alert Frequency - Route.
