# docs/swagger.json
@@ -76,6 +76,41 @@
         }
       }
     },
+    "/auth/logout": {
+      "post": {
+        "description": "Desautentica um utilizador",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "summary": "Realizar desautenticação",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "Token",
+            "name": "Authorization",
+            "in": "header",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/model.Claims"
+            }
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "description": "Regista um utilizador",
